Supports Jira suffix (#79)
